# exim-agent

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE_COMPARISON.md  COMPLIANCE_PULSE_IMPLEMENTATION_ROADMAP.md  COMPLIANCE_PULSE_INTEGRATION_PLAN.md  COMPLIANCE_PULSE_README.md  Dockerfile  IMPLEMENTATION_PROGRESS_REPORT.md  IMPLEMENTATION_REVIEW.md  IMPLEMENTATION_SUMMARY.md  INGESTION_GUIDE.md  LANGCHAIN_V1_REFACTOR_GUIDE.md  MEM0_INTEGRATION_ARCHITECTURE.md  MEMORY_IMPLEMENTATION_STATUS.md  MEMORY_INTEGRATION_PLAN.md  MIGRATION_COMPLETE.md  MULTI_PROVIDER_ARCHITECTURE.md  Makefile  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASES_0_1_2_COMPLETE.md  PHASE_3_COMPLETE_SUMMARY.md  QUICKSTART_IMPLEMENTATION.md  README.md  TEST_RESULTS.md  ZENML_IMPLEMENTATION_STATUS.md  ZENML_INTEGRATION_GUIDE.md  ZENML_OPTION_B_COMPLETE.md  ZENML_QUICKSTART.md  compliance_pulse_feature_roadmap.md  compliance_pulse_ingestion_runbook.md  compliance_pulse_mvp_lane_focus.md  docker-compose.yaml  langgraph.json  memory-first-llm-punch-list-v2.md  package-lock.json  pyproject.toml  test_ingestion.sh  (+1 more)
.kiro/specs/compliance-intelligence-platform/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
.zen/: config.yaml
config/: memory_profiles.yaml
data/: README.md  mem0_history.db
data/sql/: create_compliance_table.sql
docs/: AFRICA_US_COMPLIANCE_DATA_AND_MODEL_STRATEGY.md  API_ENDPOINTS.md  API_KEYS.md  COMPLIANCE_INTEGRATION.md  COMPLIANCE_PULSE_DATA_PLAN.md  DEPLOYMENT_GUIDE.md  FRONTEND_ARCHITECTURE.md  HTTP_CLIENT_POOLING.md  MVP_ARCHITECTURE.md  MVP_DEBLOAT_REVIEW.md  PULSE_PIPELINE_MVP.md  README.md  SUPABASE_SETUP.md  WEEKLY_PULSE_IMPLEMENTATION.md  compliance_pulse_ingestion_runbook.md  crawl4ai.md  langgraph_flow.md
frontend/: API_INTEGRATION.md  COMPONENT_GUIDE.md  DEVELOPMENT_SETUP.md  NAVIGATION_SYSTEM.md  README.md  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  loading.tsx  page.tsx
frontend/src/app/chat-demo/: page.tsx
frontend/src/app/compliance/: page.tsx
frontend/src/app/documents/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/components/: compliance-tile.tsx  error-boundary.tsx  loading-spinner.tsx  snapshot-card-container.tsx  snapshot-card.tsx
frontend/src/components/chat/: ChatHistory.tsx  ChatInput.tsx  ChatWindow.tsx  PersistentChat.tsx  index.ts
frontend/src/components/compliance/: ComplianceChat.tsx  ComplianceInputForm.tsx  ComplianceSnapshot.tsx  ComplianceWorkflow.tsx  index.ts
frontend/src/components/documents/: DocumentUpload.tsx  FileDropZone.tsx  UploadProgress.tsx  index.ts
frontend/src/components/layout/: AppLayout.tsx  index.ts
frontend/src/components/navigation/: NavigationDemo.tsx  NavigationErrorBoundary.tsx  NavigationItem.tsx  NavigationToggle.tsx  ProfileSection.tsx  SideNavigation.tsx  index.ts
frontend/src/components/ui/: input.tsx  (+3 more)
frontend/src/hooks/: index.ts  use-compliance-snapshot.ts  useChat.ts  useComplianceWorkflow.ts  useNavigation.ts
frontend/src/lib/: api.ts  types.ts
frontend/src/stores/: chatStore.ts  index.ts  navigationStore.ts  userStore.ts
frontend/src/types/: chat.ts  index.ts  navigation.ts  upload.ts
migrations/: 001_create_weekly_pulse_digests.sql  002_create_memory_analytics_table.sql  003_add_crawling_support.sql  004_create_client_portfolios.sql  README.md
notebooks/: langchain_v1.ipynb  langchain_v1_examples.ipynb  mem0_workflow_mastery.ipynb  memory_system_practice.ipynb  rag_experimentation.ipynb
notebooks/data/chroma_db/: chroma.sqlite3
scripts/: run_crawling_migration.py  run_migrations.py
src/acc_llamaindex/: config.py
src/exim_agent/: __init__.py  config.py
src/exim_agent/domain/: __init__.py  exceptions.py  models.py
src/exim_agent/infrastructure/: __init__.py  http_client.py  logging_config.py
templates/domain_models/: client_profile.py  compliance_event.py  enums.py
tests/: __init__.py  test_admin_api.py  test_client_portfolio.py  test_compliance_api.py  test_compliance_collections.py  test_compliance_pipelines.py  test_compliance_service.py  test_compliance_tools.py  test_config.py  test_delta_computation.py  test_hts_supabase.py  test_http_client_pooling.py  test_models.py  test_supabase_config.py
zMD_files/: CHROMADB_ARCHITECTURE.md  INGESTION_GUIDE.md  MEM0_IMPLEMENTATION_SUMMARY.md  MEM0_INTEGRATION_ARCHITECTURE.md  MEM0_MIGRATION_PLAN.md  MEM0_TEST_RESULTS.md  PRODUCTION_READINESS_PUNCHLIST.md  RERANKING_EVALUATION_PLAN.md  STACK_OPTIMIZATION_COMPLETE.md  ZENML_IMPLEMENTATION_STATUS.md  ZENML_OPTION_B_COMPLETE.md  rag_concepts.md
(+133 files in other folders)
